--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -453,7 +453,8 @@ Otto von Bismark = Otto von Bismarck
 
 India = Indie
 Gandhi = Mahatma Gandhi
-U. = Niezadowolenie z powodu liczby Miast podwoiło się, Niezadowolenie z powodu liczby obywateli Miast zmalało o połowę.
+ # Requires translation!
+Unhappiness from number of Cities doubled, Unhappiness from number of Citizens halved. = 
 
 The Ottomans = Imperium Osmańskie
 Suleiman I = Sulejman I
