--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -109,13 +109,15 @@ Notre Dame = Notre Dame
 'Architecture has recorded the great ideas of the human race. Not only every religious symbol, but every human thought has its page in that vast book.'  - Victor Hugo = 'La arquitectura ha registrado las grandes ideas de la raza humana. No solo simbólos religiosos, también cada pensamiento humano tiene su página en ese vasto libro.' - Victor Hugo
 
 Hagia Sophia = Santa Sofía
-'For it soars to a height to match the sky, and as if surging up from among the other buildings it stands on high and looks down upon the remainder of the city, adorning it, because it is a part of it, but glorying in its own beauty' - Procopius, De Aedificis = 'Porque se eleva a las alturas para alcanzar el cielo, y es como si surgiera de entre los demás edificios, se erige en la altura y mira hacia abajo el recordatorio de la ciudad, adornandolo, por que es parte de el, pero glorioso en su propia belleza.' - Procopius, De Aedificis
+ # Requires translation!
+'For it soars to a height to match the sky, and as if surging up from among the other buildings it stands on high and looks down upon the remainder of the city, adorning it, because it is a part of it, but glorying in its own beauty'  - Procopius, De Aedificis = 
 +33% great person generation in all cities = +33% generación de Grandes Personas en todas las ciudades
 
 Mint = Casa de la moneda
 
 Machu Picchu = Machu Picchu
-'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham ='Pocos romances pueden sobrepasar a la citadela de granito sobre los precipicios sobresalientes de Machu Picchu, la corona de la tierra Inca.' - Hiram Bingham
+ # Requires translation!
+'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 
 Gold from all trade routes +25% = +25% de oro en todas las rutas de comercio
 
 Aqueduct = Acueducto
@@ -1103,7 +1105,8 @@ Sailing = Náutica
 'He who commands the sea has command of everything.' - Themistocles = 'Aquel que comanda el mar, tiene el comando de todo'  - Temístocles
 Calendar = Calendario
 'So teach us to number our days, so that we may apply our hearts unto wisdom.' - Bible Psalms 90:12 = 'Entonces enseñanos a enumerar nuestros días, para que podamos aplicar nuestros corazones en la sabiduría' - Biblia Salmo 90:12
- Writing = Escritura
+ # Requires translation!
+Writing = 
 'He who destroys a good book kills reason itself.' - John Milton = 'Aquel que destruye un buen libro mata la razón misma' - John Milton
 Trapping = Caza
 'Even brute beasts and wandering birds do not fall into the same traps or nets twice.' - Saint Jerome = 'Incluso las brutas bestias y los pajaros errantes no caen en las mismas trampas o redes dos veces.' - San Jeronimo 
@@ -1141,7 +1144,8 @@ Physics = Física
 Metal Casting = Fundición
 'When pieces of bronze or gold or iron break, the metal-smith welds them together again in the fire, and the bond is established.' - Sri Guru Granth Sahib = 'Cuando las piezas de bronce, oro o hierro se rompen, el forjador los manipula juntos de nuevo en el fuego y la unión se establece' - Sri guru Granth Sahib
 Steel = Acero
-'John Henry said to his Captain, / 'A man ain't nothin' but a man, / And before I'll let your steam drill beat me down, / I'll die with the hammer in my hand.' - Anonymous: The Ballad of John Henry, the Steel-Drivin' Man = 'John Henry le dijo a su capitán, / 'Un hombre no es más que un hombre, / y antes de que deje a tu taladro de vapor vencerme, /Yo voy a morir con un martillo en la mano' - Anónimo: La bala de John Henrry, el remachador
+ # Requires translation!
+'John Henry said to his Captain, / 'A man ain't nothin' but a man, / And before I'll let your steam drill beat me down, / I'll die with the hammer in my hand.'' - Anonymous: The Ballad of John Henry, the Steel-Drivin' Man = 
 Compass = Brújula
 'I find the great thing in this world is not so much where we stand, as in what direction we are moving.' - Oliver Wendell Holmes = 'Yo encuentro la cosa mas grande en este mundo no donde estamos parados, si no mas bien hacía donde vamos' Oliver Wendell Holmes
 Education = Educación
@@ -1153,7 +1157,8 @@ Machinery = Mecánica
 Astronomy = Astronomía
 'Joyfully to the breeze royal Odysseus spread his sail, and with his rudder skillfully he steered.' - Homer = 'Alegremente a la briza el real Odiseo expandió sus velas y con su timón el habilidosamente dirigió' - Homero
 Acoustics = Acústica
-'Their rising all at once was as the sound of thunder heard remote' - John Milton = 'Su aumento de una vez fue como el sonido del trueno escuchado a distancia' - John Milton
+ # Requires translation!
+'Their rising all at once was as the sound of thunder heard remote' - Milton = 
 Banking = Banca
 'Happiness: a good bank account, a good cook and a good digestion' - Jean Jacques Rousseau = 'Felicidad: Una buena cuenta bancaria, una buena cocina y una buena digestión.' - Jean Jacques Rousseau
 Printing Press = Imprenta
@@ -1205,7 +1210,6 @@ Electronics = Electrónica
 Ballistics = Balística
 'Men, like bullets, go farthest when they are smoothest.' - Jean Paul = 'Los hombres, como las balas, van más lejos cuando son mas suaves' - Jean Paul
 Mass Media = Medios de comunicación
-'The speed of communications is wondrous to behold, it is absolute that speed does multiply the distribution of information that we know to be untrue.' - Edward R. Murrow = 'La velicdad de la comunicación es fascinante de admirar, Es absoluto que la velocidad multiplica la distribución de información que sabemos no es verdad.' - Edward R. Murrow
 Flight = Vuelo
 'Aeronautics was neither an industry nor a science. It was a miracle.' - Igor Sikorsky = "La Aeronautica no fue ni una industria ni una ciencia. Fue un milagro.' - Igor Sikorsky
 'The introduction of so powerful an agent as steam to a carriage on wheels will make a great change in the situation of man.' - Thomas Jefferson = 'La introducción de un agente tan poderoso como el vapor en un caruaje con ruedas hara un gran cambio en la situación del hombre.' - Thomas Jefferson
