Added the notification for the third-party civilizations
If a civilizations knows about some two civilizations, it will be notified when:
* They declare the war
* They make a peace
* They sign the declaration of peace
* One denounce the other

Additionally, when civ enters a new era, all civs that know about it get a notification

--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -316,6 +316,15 @@ Indeed! = Vskutku!
 Denounce ([numberOfTurns] turns) = Odsoudit ([numberOfTurns] kol)
 We will remember this. = To vám nikdy nezapomeneme!
 
+# Requires translation
+[civName] has declared war on [targetCivName]! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+# Requires trans0lation
+[civName] has denounced [targetCivName]!" = 
+
 Unforgivable = Nenávist
 Enemy = Nepřátelství
 Competitor = Negativní
@@ -838,6 +847,8 @@ Hurry Wonder = Uspíšit stavbu Divu
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Naši občané jsou spokojeni s vaší vládou po dlouhou dobu díky čemuž říše vstoupila do Zlatého věku!
 You have entered the [newEra]! = Vstoupili jsme do éry [newEra]!
 [policyBranch] policy branch unlocked! = Zpřístupněna větev sociální politiky: [policyBranch]
+ # Requires translation
+[civName] has entered the [eraName]! = 
 Overview = Přehled
 Total = Celkem
 Stats = Statistiky
