--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -516,6 +516,8 @@ Declare war on [civName]? =
  # Requires translation!
 [civName] has declared war on us! = 
  # Requires translation!
+[attackingCivName] has declared war on [defendingCivName]! = 
+ # Requires translation!
 [leaderName] of [nation] = 
  # Requires translation!
 You'll pay for this! = 
@@ -549,6 +551,15 @@ Indeed! =
 Denounce ([numberOfTurns] turns) = 
  # Requires translation!
 We will remember this. = 
+
+# Requires translation
+[civName] has declared war on [targetCivName]! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+# Requires trans0lation
+[civName] has denounced [targetCivName]!" = 
 
  # Requires translation!
 Unforgivable = 
@@ -1198,6 +1209,8 @@ You and [name] are no longer allies! =
 [civName] gave us a [unitName] as gift near [cityName]! = 
  # Requires translation!
 [civName] has denounced us! = 
+ # Requires translation!
+[civName] has denounced [targetCivName]! = 
  # Requires translation!
 [cityName] has been connected to your capital! = 
  # Requires translation!
