--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -314,6 +314,15 @@ Indeed! = Perfetto!
 Denounce ([numberOfTurns] turns) = Denuncia ([numberOfTurns] turni)
 We will remember this. = Non credere che ce lo scorderemo!
 
+# Requires translation
+[civName] has declared war on [targetCivName]! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+# Requires trans0lation
+[civName] has denounced [targetCivName]!" = 
+
 Unforgivable = Imperdonabile!
 Enemy = Nemici
 Competitor = Avversari
@@ -827,6 +836,8 @@ Hurry Wonder = Accellera Meraviglia
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = I tuoi cittadini sono da tempo contenti del tuo governo! Il tuo impero è entrato in un'Età dell'Oro!
 You have entered the [newEra]! = Benvenuto nell'Era [newEra]!
 [policyBranch] policy branch unlocked! = Ramo sociale [policyBranch] sbloccato!
+ # Requires translation
+[civName] has entered the [eraName]! = 
 Overview = Panoramica
 Total = Totale
 Stats = Statistiche
