--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -482,6 +482,15 @@ Indeed! = Sesungguhnya
 Denounce ([numberOfTurns] turns) = Kecam ([numberOfTurns] pusingan)
 We will remember this. = Kami akan ingat perkara ini
 
+# Requires translation
+[civName] has declared war on [targetCivName]! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+# Requires trans0lation
+[civName] has denounced [targetCivName]!" = 
+
 Unforgivable = Tidak dapat dimaafkan
 Enemy = Musuh
 Competitor = Persaingan
@@ -1398,6 +1407,8 @@ Your citizens have been happy with your rule for so long that the empire enters 
 You have entered the [newEra]! = 
  # Requires translation!
 [policyBranch] policy branch unlocked! = 
+ # Requires translation
+[civName] has entered the [eraName]! = 
  # Requires translation!
 Overview = 
  # Requires translation!
