--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -432,6 +432,15 @@ Denounce ([numberOfTurns] turns) =
  # Requires translation!
 We will remember this. = 
 
+# Requires translation
+[civName] has declared war on [targetCivName]! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+# Requires trans0lation
+[civName] has denounced [targetCivName]!" = 
+
  # Requires translation!
 Unforgivable = 
  # Requires translation!
@@ -1205,6 +1214,8 @@ Hurry Wonder = Grăbește minune
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = 
 You have entered the [newEra]! = Ai intrat în epoca [newEra]!
 [policyBranch] policy branch unlocked! = Ramura [policyBranch] deblocată!
+ # Requires translation
+[civName] has entered the [eraName]! = 
 Overview = Prezentare generală
 Total = Total
 Stats = Statistici
