--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -315,6 +315,11 @@ Indeed! = Разумеется!
 Denounce ([numberOfTurns] turns) = Осуждение на [numberOfTurns] ходов
 We will remember this. = Мы это запомним
 
+[civName] has declared war on [targetCivName]! = [civName] объявили войну [targetCivName]!
+[civName] and [targetCivName] have signed the Peace Treaty! = [civName] и [targetCivName] заключили мир!
+[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] и [targetCivName] подписали Декларацию Дружбы!
+[civName] has denounced [targetCivName]!" = [civName] публично осудили [targetCivName]!
+
 Unforgivable = Непростительно враждебные
 Enemy = Враждебные
 Competitor = Соперничающие
@@ -828,6 +833,7 @@ Hurry Wonder = Ускорить постройку чуда
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Граждане настолько счастливы при вашей власти, что ваша империя вступает в золотой век!
 You have entered the [newEra]! = Вы вошли в эпоху [newEra]!
 [policyBranch] policy branch unlocked! = Ветвь общественных институтов [policyBranch] разблокирована!
+[civName] has entered the [eraName]! = [civName] вошли в [eraName]!
 Overview = Обзор
 Total = Всего
 Stats = Статистика
