--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -315,6 +315,15 @@ Indeed! = 這是無比正確的選擇！
 Denounce ([numberOfTurns] turns) = 譴責([numberOfTurns]回合)
 We will remember this. = 這種侮辱我們絕不會忘記。請好自為之！
 
+# Requires translation
+[civName] has declared war on [targetCivName]! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+# Requires trans0lation
+[civName] has denounced [targetCivName]!" = 
+
 Unforgivable = 仇深似海
 Enemy = 宿命之敵
 Competitor = 瑜亮之爭
@@ -839,6 +848,8 @@ Hurry Wonder = 加速奇觀建造
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = 人民為您英明領導下取得的豐功偉業歡欣鼓舞，您的帝國進入了黃金時代！
 You have entered the [newEra]! = 您已進入了[newEra]！
 [policyBranch] policy branch unlocked! = [policyBranch]分支解鎖！
+ # Requires translation
+[civName] has entered the [eraName]! = 
 Overview = 概覽
 Total = 總計
 Stats = 統計
