--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -529,6 +529,15 @@ Denounce ([numberOfTurns] turns) =
  # Requires translation!
 We will remember this. = 
 
+# Requires translation
+[civName] has declared war on [targetCivName]! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+# Requires trans0lation
+[civName] has denounced [targetCivName]!" = 
+
  # Requires translation!
 Unforgivable = 
  # Requires translation!
@@ -1354,6 +1363,8 @@ Hurry Wonder =
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = 
 You have entered the [newEra]! = Jij bent in het/de [newEra] aangekomen!
 [policyBranch] policy branch unlocked! =  Het/De [policyBranch] beleid is ontgrendeld!
+ # Requires translation
+[civName] has entered the [eraName]! = 
  # Requires translation!
 Overview = 
  # Requires translation!
