--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -314,6 +314,15 @@ Indeed! = Parfait!
 Denounce ([numberOfTurns] turns) = Dénoncer ([numberOfTurns] tours)
 We will remember this. = Nous nous en souviendrons.
 
+# Requires translation
+[civName] has declared war on [targetCivName]! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+# Requires trans0lation
+[civName] has denounced [targetCivName]!" = 
+
 Unforgivable = Impardonnable
 Enemy = Ennemi
 Competitor = Adversaire
@@ -828,6 +837,8 @@ Hurry Wonder = Accélérer la construction
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Vos citoyens sont satisfaits de votre gouvernance depuis si longtemps que votre empire débute un Age d'Or !
 You have entered the [newEra]! = Vous êtes entré dans l'ère [newEra]!
 [policyBranch] policy branch unlocked! = Doctrine [policyBranch] déverrouillée!
+ # Requires translation
+[civName] has entered the [eraName]! = 
 Overview = Vue d'ensemble
 Total = Total
 Stats = Statistiques
