--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -362,6 +362,15 @@ Indeed! = Benar!
 Denounce ([numberOfTurns] turns) = Hina ([numberOfTurns] turns)
 We will remember this. = Kami akan ingat ini.
 
+# Requires translation
+[civName] has declared war on [targetCivName]! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+# Requires trans0lation
+[civName] has denounced [targetCivName]!" = 
+
 Unforgivable = Tak Termaafkan
 Enemy = Musuh
 Competitor = Saingan
@@ -1206,6 +1215,8 @@ Your citizens have been happy with your rule for so long that the empire enters 
 You have entered the [newEra]! = 
  # Requires translation!
 [policyBranch] policy branch unlocked! = 
+ # Requires translation
+[civName] has entered the [eraName]! = 
  # Requires translation!
 Overview = 
  # Requires translation!
