--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -329,6 +329,15 @@ Indeed! = 좋소!
 Denounce ([numberOfTurns] turns) = 비난 ([numberOfTurns] 턴 동안)
 We will remember this. = 우리는 이 일을 기억할 것입니다.
 
+# Requires translation
+[civName] has declared war on [targetCivName]! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+# Requires trans0lation
+[civName] has denounced [targetCivName]!" = 
+
 Unforgivable = 용서 못함
 Enemy = 적대적
 Competitor = 경쟁자
@@ -862,6 +871,8 @@ Hurry Wonder = 불가사의 건축 가속
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = 시민들이 당신의 통치에 행복해하여 국가에 황금기가 시작됩니다!
 You have entered the [newEra]! = [newEra]에 온 것을 환영합니다!
 [policyBranch] policy branch unlocked! = [policyBranch] 정책을 채택할 수 있습니다!
+ # Requires translation
+[civName] has entered the [eraName]! = 
 Overview = 문명 상태
 Total = 전체
 Stats = 통계
