--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -314,6 +314,15 @@ Indeed! = Wspaniale!
 Denounce ([numberOfTurns] turns) = Potęp cywilizację na [numberOfTurns] tur
 We will remember this. = Zapamiętamy to sobie!
 
+# Requires translation
+[civName] has declared war on [targetCivName]! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+# Requires trans0lation
+[civName] has denounced [targetCivName]!" = 
+
 Unforgivable = Niewybaczlne
 Enemy = Wróg 
 Competitor = Konkurenci
@@ -828,6 +837,8 @@ Hurry Wonder = Przyspiesz Budowanie Cudu
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Twoi obywatele są zadowoleni pod twoim panowaniem tak długo że imperium wkracza w Złotą Era
 You have entered the [newEra]! = Wkroczyłeś do [newEra]!
 [policyBranch] policy branch unlocked! = Odblokowano gałąź ustroju społecznego [policyBranch] 
+ # Requires translation
+[civName] has entered the [eraName]! = 
 Overview = Przegląd
 Total = Łącznie
 Stats = Statystyki
