--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -316,6 +316,15 @@ Indeed! = Perfeito!
 Denounce ([numberOfTurns] turns) = Condenar ([numberOfTurns] turnos)
 We will remember this. = Nós nos lembraremos disso.
 
+# Requires translation
+[civName] has declared war on [targetCivName]! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+# Requires trans0lation
+[civName] has denounced [targetCivName]!" = 
+
 Unforgivable = Imperdoável
 Enemy = Inimigos
 Competitor = Adversários
@@ -890,6 +899,8 @@ Hurry Wonder = Apressar a contrução Maravilha
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = 
 You have entered the [newEra]! = Voçê entrou na [newEra]!
 [policyBranch] policy branch unlocked! = [policyBranch] foi desbloqueado(a)
+ # Requires translation
+[civName] has entered the [eraName]! = 
 Overview = Visão geral
 Total = Total
 Stats = Estatisticas
