--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -315,6 +315,15 @@ Indeed! = Справді!
 Denounce ([numberOfTurns] turns) = Звинувачення (Ходів: [numberOfTurns])
 We will remember this. = Ми пам’ятатимемо це.
 
+# Requires translation
+[civName] has declared war on [targetCivName]! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+# Requires trans0lation
+[civName] has denounced [targetCivName]!" = 
+
 Unforgivable = непрощальні
 Enemy =  ворожі
 Competitor =  конкурентні
@@ -828,6 +837,8 @@ Hurry Wonder = Прискорити будування дива
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Ваші громадяни були задоволені вашим правлінням так довго, що імперія вступає в Золотий вік!
 You have entered the [newEra]! = Ви увійшли до епохи [newEra]!
 [policyBranch] policy branch unlocked! = Галузь політики [policyBranch] розблоковано
+ # Requires translation
+[civName] has entered the [eraName]! = 
 Overview = Огляд
 Total = Усього
 Stats = Статистика
