--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -314,6 +314,15 @@ Indeed! =
 Denounce ([numberOfTurns] turns) = 
 We will remember this. = 
 
+# Requires translation
+[civName] has declared war on [targetCivName]! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+# Requires translation
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+# Requires trans0lation
+[civName] has denounced [targetCivName]!" = 
+
 Unforgivable = 
 Enemy = 
 Competitor = 
@@ -826,6 +835,7 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = 
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = 
 You have entered the [newEra]! = 
+[civName] has entered the [eraName]! =
 [policyBranch] policy branch unlocked! = 
 Overview = 
 Total = 
