Fixed the translation `.properties`

--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -529,13 +529,13 @@ Denounce ([numberOfTurns] turns) =
  # Requires translation!
 We will remember this. = 
 
-# Requires translation
+ # Requires translation!
 [civName] has declared war on [targetCivName]! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Peace Treaty! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = 
-# Requires trans0lation
+ # Requires translation!
 [civName] has denounced [targetCivName]!" = 
 
  # Requires translation!
@@ -1362,9 +1362,9 @@ Hurry Wonder =
  # Requires translation!
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = 
 You have entered the [newEra]! = Jij bent in het/de [newEra] aangekomen!
-[policyBranch] policy branch unlocked! =  Het/De [policyBranch] beleid is ontgrendeld!
- # Requires translation
+ # Requires translation!
 [civName] has entered the [eraName]! = 
+[policyBranch] policy branch unlocked! =  Het/De [policyBranch] beleid is ontgrendeld!
  # Requires translation!
 Overview = 
  # Requires translation!
