--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -482,13 +482,13 @@ Indeed! = Sesungguhnya
 Denounce ([numberOfTurns] turns) = Kecam ([numberOfTurns] pusingan)
 We will remember this. = Kami akan ingat perkara ini
 
-# Requires translation
+ # Requires translation!
 [civName] has declared war on [targetCivName]! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Peace Treaty! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = 
-# Requires trans0lation
+ # Requires translation!
 [civName] has denounced [targetCivName]!" = 
 
 Unforgivable = Tidak dapat dimaafkan
@@ -1406,9 +1406,9 @@ Your citizens have been happy with your rule for so long that the empire enters 
  # Requires translation!
 You have entered the [newEra]! = 
  # Requires translation!
-[policyBranch] policy branch unlocked! = 
- # Requires translation
 [civName] has entered the [eraName]! = 
+ # Requires translation!
+[policyBranch] policy branch unlocked! = 
  # Requires translation!
 Overview = 
  # Requires translation!
