--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -315,10 +315,14 @@ Indeed! = Разумеется!
 Denounce ([numberOfTurns] turns) = Осуждение на [numberOfTurns] ходов
 We will remember this. = Мы это запомним
 
-[civName] has declared war on [targetCivName]! = [civName] объявили войну [targetCivName]!
-[civName] and [targetCivName] have signed the Peace Treaty! = [civName] и [targetCivName] заключили мир!
-[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] и [targetCivName] подписали Декларацию Дружбы!
-[civName] has denounced [targetCivName]!" = [civName] публично осудили [targetCivName]!
+ # Requires translation!
+[civName] has declared war on [targetCivName]! = 
+ # Requires translation!
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+ # Requires translation!
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+ # Requires translation!
+[civName] has denounced [targetCivName]!" = 
 
 Unforgivable = Непростительно враждебные
 Enemy = Враждебные
@@ -832,8 +836,9 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = Ускорить постройку чуда
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Граждане настолько счастливы при вашей власти, что ваша империя вступает в золотой век!
 You have entered the [newEra]! = Вы вошли в эпоху [newEra]!
+ # Requires translation!
+[civName] has entered the [eraName]! = 
 [policyBranch] policy branch unlocked! = Ветвь общественных институтов [policyBranch] разблокирована!
-[civName] has entered the [eraName]! = [civName] вошли в [eraName]!
 Overview = Обзор
 Total = Всего
 Stats = Статистика
