--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -316,13 +316,13 @@ Indeed! = ¡Por supuesto!
 Denounce ([numberOfTurns] turns) = Denunciar ([numberOfTurns] turnos)]
 We will remember this. = Recordaremos esto.
 
-# Requires translation
+ # Requires translation!
 [civName] has declared war on [targetCivName]! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Peace Treaty! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = 
-# Requires trans0lation
+ # Requires translation!
 [civName] has denounced [targetCivName]!" = 
 
 Unforgivable = Imperdonable
@@ -837,9 +837,9 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = Acelerar Maravilla
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = ¡Tus ciudadanos han estado contentos con tu gobierno durante tanto tiempo que el imperio ha entrado en una Edad de Oro!
 You have entered the [newEra]! = ¡Has entrado en la [newEra]!
-[policyBranch] policy branch unlocked! = ¡Rama política [policyBranch] desbloqueada!
- # Requires translation
+ # Requires translation!
 [civName] has entered the [eraName]! = 
+[policyBranch] policy branch unlocked! = ¡Rama política [policyBranch] desbloqueada!
 Overview = Visión general
 Total = Total
 Stats = Estadísticas
