--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -516,8 +516,6 @@ Declare war on [civName]? =
  # Requires translation!
 [civName] has declared war on us! = 
  # Requires translation!
-[attackingCivName] has declared war on [defendingCivName]! = 
- # Requires translation!
 [leaderName] of [nation] = 
  # Requires translation!
 You'll pay for this! = 
@@ -552,13 +550,13 @@ Denounce ([numberOfTurns] turns) =
  # Requires translation!
 We will remember this. = 
 
-# Requires translation
+ # Requires translation!
 [civName] has declared war on [targetCivName]! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Peace Treaty! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = 
-# Requires trans0lation
+ # Requires translation!
 [civName] has denounced [targetCivName]!" = 
 
  # Requires translation!
@@ -1210,8 +1208,6 @@ You and [name] are no longer allies! =
  # Requires translation!
 [civName] has denounced us! = 
  # Requires translation!
-[civName] has denounced [targetCivName]! = 
- # Requires translation!
 [cityName] has been connected to your capital! = 
  # Requires translation!
 [cityName] has been disconnected from your capital! = 
@@ -1520,6 +1516,8 @@ Hurry Wonder =
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = 
  # Requires translation!
 You have entered the [newEra]! = 
+ # Requires translation!
+[civName] has entered the [eraName]! = 
  # Requires translation!
 [policyBranch] policy branch unlocked! = 
  # Requires translation!
