--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -319,13 +319,13 @@ Indeed! = Auf jeden Fall!
 Denounce ([numberOfTurns] turns) = Denunziere ([numberOfTurns] Runden)
 We will remember this. = Das werden wir nie vergessen!
 
-# Requires translation
+ # Requires translation!
 [civName] has declared war on [targetCivName]! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Peace Treaty! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = 
-# Requires trans0lation
+ # Requires translation!
 [civName] has denounced [targetCivName]!" = 
 
 Unforgivable = Todfeind
@@ -849,9 +849,9 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = Wunder beschleunigen
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Deine Bevölkerung ist so zufrieden mit deiner Herrschaft, dass dein Imperium in ein Goldenes Zeitalter eintritt!
 You have entered the [newEra]! = Zeitalter [newEra] ist eingeläutet!
-[policyBranch] policy branch unlocked! = Grundsatzzweig [policyBranch] wurde freigeschaltet
- # Requires translation
+ # Requires translation!
 [civName] has entered the [eraName]! = 
+[policyBranch] policy branch unlocked! = Grundsatzzweig [policyBranch] wurde freigeschaltet
 Overview = Überblick
 Total = Gesamt
 Stats = Statistiken
