--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -362,13 +362,13 @@ Indeed! = Benar!
 Denounce ([numberOfTurns] turns) = Hina ([numberOfTurns] turns)
 We will remember this. = Kami akan ingat ini.
 
-# Requires translation
+ # Requires translation!
 [civName] has declared war on [targetCivName]! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Peace Treaty! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = 
-# Requires trans0lation
+ # Requires translation!
 [civName] has denounced [targetCivName]!" = 
 
 Unforgivable = Tak Termaafkan
@@ -1214,9 +1214,9 @@ Your citizens have been happy with your rule for so long that the empire enters 
  # Requires translation!
 You have entered the [newEra]! = 
  # Requires translation!
-[policyBranch] policy branch unlocked! = 
- # Requires translation
 [civName] has entered the [eraName]! = 
+ # Requires translation!
+[policyBranch] policy branch unlocked! = 
  # Requires translation!
 Overview = 
  # Requires translation!
