--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -314,13 +314,13 @@ Indeed! = Perfetto!
 Denounce ([numberOfTurns] turns) = Denuncia ([numberOfTurns] turni)
 We will remember this. = Non credere che ce lo scorderemo!
 
-# Requires translation
+ # Requires translation!
 [civName] has declared war on [targetCivName]! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Peace Treaty! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = 
-# Requires trans0lation
+ # Requires translation!
 [civName] has denounced [targetCivName]!" = 
 
 Unforgivable = Imperdonabile!
@@ -835,9 +835,9 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = Accellera Meraviglia
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = I tuoi cittadini sono da tempo contenti del tuo governo! Il tuo impero è entrato in un'Età dell'Oro!
 You have entered the [newEra]! = Benvenuto nell'Era [newEra]!
-[policyBranch] policy branch unlocked! = Ramo sociale [policyBranch] sbloccato!
- # Requires translation
+ # Requires translation!
 [civName] has entered the [eraName]! = 
+[policyBranch] policy branch unlocked! = Ramo sociale [policyBranch] sbloccato!
 Overview = Panoramica
 Total = Totale
 Stats = Statistiche
