--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -316,13 +316,13 @@ Indeed! = Perfeito!
 Denounce ([numberOfTurns] turns) = Condenar ([numberOfTurns] turnos)
 We will remember this. = Nós nos lembraremos disso.
 
-# Requires translation
+ # Requires translation!
 [civName] has declared war on [targetCivName]! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Peace Treaty! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = 
-# Requires trans0lation
+ # Requires translation!
 [civName] has denounced [targetCivName]!" = 
 
 Unforgivable = Imperdoável
@@ -898,9 +898,9 @@ Hurry Wonder = Apressar a contrução Maravilha
  # Requires translation!
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = 
 You have entered the [newEra]! = Voçê entrou na [newEra]!
-[policyBranch] policy branch unlocked! = [policyBranch] foi desbloqueado(a)
- # Requires translation
+ # Requires translation!
 [civName] has entered the [eraName]! = 
+[policyBranch] policy branch unlocked! = [policyBranch] foi desbloqueado(a)
 Overview = Visão geral
 Total = Total
 Stats = Estatisticas
