--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -432,13 +432,13 @@ Denounce ([numberOfTurns] turns) =
  # Requires translation!
 We will remember this. = 
 
-# Requires translation
+ # Requires translation!
 [civName] has declared war on [targetCivName]! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Peace Treaty! = 
-# Requires translation
+ # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = 
-# Requires trans0lation
+ # Requires translation!
 [civName] has denounced [targetCivName]!" = 
 
  # Requires translation!
@@ -1213,9 +1213,9 @@ Hurry Wonder = Grăbește minune
  # Requires translation!
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = 
 You have entered the [newEra]! = Ai intrat în epoca [newEra]!
-[policyBranch] policy branch unlocked! = Ramura [policyBranch] deblocată!
- # Requires translation
+ # Requires translation!
 [civName] has entered the [eraName]! = 
+[policyBranch] policy branch unlocked! = Ramura [policyBranch] deblocată!
 Overview = Prezentare generală
 Total = Total
 Stats = Statistici
